fixed link on header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 <body>
   <div id="header">
-    <div id="link" onClick='window.location.href="https://reddit.com/r/ironthronepowers"'></div>
+    <div id="link" onClick='window.location.href="https://reddit.com/r/lordoftheringsrp"'></div>
   </div>  
   <div id="toolbar">
     <button type="button" class="btn btn-block" style="background-color:#b8b2b5" onClick="toggleGondorLayer()">Toggle Gondor</button>
@@ -94,7 +94,7 @@
 		//if(confirm("ADD MARKER HERE=?")){
 		//	var mrk = prompt("Marker (SL,CL,Dorne,II,North,NotWesteros,RL,TrueNorth,Vale,Wall,West):")
 		//	var txt = prompt("Text")
-			m_icon = L.icon({iconUrl: 'img/marker/transparent.png',iconSize: [32, 74]})
+			m_icon = L.icon({iconUrl: 'img/marker/transparent.png',iconSize: [20, 20]})
 			mark = new L.Marker([e.latlng.lat, e.latlng.lng], {icon: m_icon})//.bindPopup(txt);
 		//	var circle = L.circle([e.latlng.lat, e.latlng.lng],20, {color: col, fillColor:col,fillOpacity:1}).addTo(map)
 		//	circles.push(circle)
@@ -114,7 +114,7 @@
 		//	var mrk = prompt("Marker (SL,CL,Dorne,II,North,NotWesteros,RL,TrueNorth,Vale,Wall,West):")
 		//	var txt = prompt("Text")
 			col2 = prompt("Dot color")
-			m_icon = L.icon({iconUrl: 'img/marker/transparent.png',iconSize: [32, 74]})
+			m_icon = L.icon({iconUrl: 'img/marker/transparent.png',iconSize: [20, 20]})
 			mark = new L.Marker([e.latlng.lat, e.latlng.lng], {icon: m_icon})//.bindPopup(txt);
 			var circle = L.circle([e.latlng.lat, e.latlng.lng],30000, {color: col2, fillColor:col2,fillOpacity:0.75}).addTo(map)
 			circles.push(circle)
