--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>IronThronePowers map</title>
+  <title>Lordoftheringsrp map</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/leaflet.css">
   <link rel="stylesheet" href="css/page.css">
