Popups added to the borders, and a hide borders button adderd

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<button type="button" class="btn btn-block" style="background-color:#3BB9FF" onClick="toggleWilderlandsLayer()">Toggle Wilderlands</button>
 	<button type="button" class="btn btn-block" style="background-color:#5EFB6E" onClick="toggleLindonLayer()">Toggle Lindon</button>
 	<button type="button" class="btn btn-block" style="background-color:#254117" onClick="toggleWoodlandsLayer()">Toggle Woodlands</button>
+	<button type="button" class="btn btn-block" style="background-color:#000000" onClick="togglePolyLayer()">Toggle Borders</button>
     <hr>
 	<button id="btn-line" type="button" class="btn btn-block btn-default" data-drawing="no" style="color:#000" onClick="add_line()">Draw Line</button>
 	<button id="btn-point" type="button" class="btn btn-block btn-default" data-drawing="no" style="color:#000" onClick="add_point()">Draw point</button>
